# AOD

lista1/zad1/: a.out  bfs.c  bfs.out  dfs.c  dfs.out  script.sh
lista1/zad1/data/: 1  2  3  4  6  8
lista1/zad2/: script.sh  top.c  top.cpp  top.out
lista1/zad3/: ;  script.sh  ssc.cpp  ssc.out
lista2/: zad1.jl  zad3.jl  zad4.jl  zad5.jl
lista3/: CMakeLists.txt  Makefile  data_generate.sh  dial.cpp  dijkstra.cpp  lib.cpp  lib.hpp  long_data.txt  main.c  main.cpp  main.out  radix.cpp  radixheap.cpp  radixheap.hpp  rand_data.txt  rand_datap2p.txt  square_data.txt
lista4/ex1_ex4/: build.sh
